# wasm_snake_game

./: .gitignore  Cargo.toml
pkg/: rust_wasm.d.ts  rust_wasm.js  rust_wasm_bg.wasm  rust_wasm_bg.wasm.d.ts
src/: lib.rs
www/: bootstrap.ts  index.html  index.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
